Use sequenced collection and getFirst and getLast